--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,8 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+/.phpstorm.meta.php
+/composer.lock
+/_ide_helper.php
 
 /public/helper/node_modules
