--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
-        "barryvdh/laravel-cors": "^0.10.0",
+        "php": ">=7.1.3",
+        "barryvdh/laravel-cors": "^0.11.0",
         "barryvdh/laravel-ide-helper": "^2.4",
-        "fideloper/proxy": "~3.3",
+        "fideloper/proxy": "~4.0",
         "fzaninotto/faker": "^1.7",
-        "laravel/framework": "5.5.*",
-        "laravel/passport": "^4.0",
+        "laravel/framework": "5.6.*",
+        "laravel/passport": "^5.0",
         "laravel/tinker": "~1.0",
         "ytake/laravel-smarty": "^2.2",
         "asdozzz/essence":"dev-master",
@@ -25,7 +25,7 @@
         "barryvdh/laravel-debugbar": "^3.1",
         "filp/whoops": "~2.0",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~7.0"
     },
     "autoload": {
         "classmap": [
@@ -64,8 +64,7 @@
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan ide-helper:generate",
-            "php artisan ide-helper:meta",
-            "php artisan optimize"
+            "php artisan ide-helper:meta"
         ]
     },
     "config": {
